login, signup, getuser, home working